fr24/files/etc/network/iptables
# Generated by iptables-save v1.4.14 on Wed Feb  4 17:51:24 2015
*filter
:INPUT ACCEPT [912:114612]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1228:925028]
-A INPUT -i lo -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 222 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 123 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 8754 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 30003 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 0:1023 -j DROP
-A INPUT -p udp -m udp --dport 0:1023 -j DROP
-A INPUT -p tcp -m tcp --dport 8080 -j DROP
-A INPUT -p tcp -m tcp --dport 8754 -j DROP
-A INPUT -p tcp -m tcp --dport 30003 -j DROP
COMMIT
# Completed on Wed Feb  4 17:51:24 2015
